--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -1,12 +1,72 @@
+<!doctype html>
 <html>
     <head>
+        <style type="text/css">
+        .main{
+            margin-left:160px;
+            padding: 0px 10px;
+        }
+        .sidenav{ 
+            height:100%;
+            width:160px;
+            position: fixed;
+            z-index:1;
+            top:0;
+            left:0;
+            background-color: #111;
+            overflow-x :hidden;
+            padding-top:20px;
+         }
+         .sidenav a{ 
+             padding:6px 8px 6px 16px;
+             text-decoration:none;
+             font-size:25px;
+             color: #818181;
+             display: block;
+
+         }
+         .sidenav a:hover{ 
+             
+             color: #f1f1f1;
+    
+
+         }
+
+        
+        
+        </style>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        
         <title>{% block title %} Mer's Website {% endblock %}</title>
     </head>
     <body>
-        <div id="content" name="content">
+        <div class="sidenav">
+            <a href="/home">Home</a>
+            <a href="/create">Create</a>
+            <a href="/2">View</a>
+
+        </div>
+        <div id="content",  name="content" , class="main">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <h1 class="mt-2">Merhamdin's Website</h1>
+                <hr class="mt-0 mb-4">
         {% block content %}
         {% endblock %}
+            </div>
         </div>
+        </div>
+        <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
         
     </body>
 </html>
