Readme statusso that i can pick it up again

--- a/mysite/main/templates/main/create.html
+++ b/mysite/main/templates/main/create.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
-{% block title %} Create New List {% endblock %}
+{% block title %} Create New To Do List {% endblock %}
 {% block content %} 
-<h3>Create Page</h3>
+<h3>Create a To Do List</h3>
 {% if user.is_authenticated %}
 <form method="post" class="form-group">
 {% csrf_token %}
@@ -14,7 +14,7 @@
 </div>
 </form>
 {% else %}
-<p> You must be logged in to be able to create pages. Log in <a href="/login">here!</a> </p>
+<p> You must be logged in to be able to create To Do Lists. Log in <a href="/login">here!</a> </p>
 {% endif %}
 
 {% endblock %}
