--- a/mysite/register/templates/registration/login.html
+++ b/mysite/register/templates/registration/login.html
@@ -2,6 +2,9 @@
 {% block title %}Login {% endblock%}
 {% block content %}
 {% load crispy_forms_tags %}
+{% if user.is_authenticated %}
+<h1>Hello</h1>
+{% else %}
 <form method="post" class="form-group">
     {% csrf_token %}
     {{form}}
@@ -9,4 +12,5 @@
     <button type="submit" class="btn btn-success">Log in</button>
     <p>Don't have an account? Create one. <a href="/register"> Register here</a> </p>
 </form>
+{% endif %}
 {% endblock%}
