--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -39,25 +39,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         
-        <title>{% block title %} Mer's Website {% endblock %}</title>
+        <title>{% block title %} 2DoList {% endblock %}</title>
     </head>
     <body>
         <div class="sidenav">
+        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="/home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="/create" role="tab" aria-controls="v-pills-profile" aria-selected="false">Create</a>
+            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="/view" role="tab" aria-controls="v-pills-messages" aria-selected="false">View</a>
+            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="/login" role="tab" aria-controls="v-pills-settings" aria-selected="false">Login</a>
+          </div>
+        </div>
+        <!-- <div class="sidenav">
             <a href="/">Home</a>
             <a href="/create">Create</a>
             <a href="/view">View</a>
-            <!-- bad practice, people can go to website via inputting a link, subject to change -->
+            
             {% if user.is_authenticated %}
             <a href="/logout">Log out</a>
             {% else %}
             <a href="/login">Log in</a>
             {% endif %}
 
-        </div>
+        </div> -->
         <div id="content",  name="content" , class="main">
         <div class="row justify-content-center">
             <div class="col-8">
-                <h1 class="mt-2">Merhamdin's Website</h1>
+                <h1 class="mt-2">2DoList</h1>
                 <hr class="mt-0 mb-4">
         
         {% block content %}
@@ -68,13 +76,16 @@
         </div>
         <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
-        
+   
     </body>
+     <!-- Option 1: Bootstrap Bundle with Popper -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+     <!-- Option 2: Separate Popper and Bootstrap JS -->
+     
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+     
 </html>
